add codec
