# contract/src/main/swagger/SchemaRegistry.yaml
@@ -159,7 +159,7 @@ paths:
           description: Updated schema validation policy
         404:
           description: Group with given name not found
-        428:
+        412:
           description: Write conflict 
         500:
           description: Internal server error while fetching Group details
@@ -239,10 +239,10 @@ paths:
           description: Group not found
         409:
           description: Incompatible schema
+        412:
+          description: Write conflict
         417:
           description: Invalid schema type
-        428:
-          description: Write conflict
         500:
           description: Internal server error while creating a Group
   /groups/{groupName}/schemas/validate:
@@ -617,6 +617,32 @@ paths:
           description: Group or encoding id with given name not found
         500:
           description: Internal server error while fetching Group details
+    post:
+      tags:
+      - "Group"
+      operationId: addCodec
+      description: Adds a new codec to the group
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: AddCodec
+          description: The codec
+          required: true
+          schema:
+            type: object
+            properties:
+              codec:
+                  $ref: "#/definitions/CodecType"
+      responses:
+        201:
+          description: Successfully added codec to group
+        404: 
+          description: Group not found
+        412:
+          description: Codec not found
+        500:
+          description: Internal server error while creating a Group
 definitions:
   GroupsList:
     type: object
