# server/src/main/java/io/pravega/schemaregistry/server/rest/v1/ApiV1.java
@@ -9,6 +9,7 @@
  */
 package io.pravega.schemaregistry.server.rest.v1;
 
+import io.pravega.schemaregistry.contract.generated.rest.model.AddCodec;
 import io.pravega.schemaregistry.contract.generated.rest.model.AddSchemaToGroupRequest;
 import io.pravega.schemaregistry.contract.generated.rest.model.CanReadRequest;
 import io.pravega.schemaregistry.contract.generated.rest.model.CodecsList;
@@ -78,12 +79,14 @@ public final class ApiV1 {
                 @io.swagger.annotations.ApiResponse(code = 201, message = "Successfully added schema to the group", response = VersionInfo.class),
                 @io.swagger.annotations.ApiResponse(code = 404, message = "Group not found", response = Void.class),
                 @io.swagger.annotations.ApiResponse(code = 409, message = "Incompatible schema", response = Void.class),
+                @io.swagger.annotations.ApiResponse(code = 412, message = "Write conflict", response = Void.class),
+                @io.swagger.annotations.ApiResponse(code = 417, message = "Invalid schema type", response = Void.class),
                 @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while creating a Group", response = Void.class)})
         void addSchemaToGroupIfAbsent(@ApiParam(value = "Group name", required = true) @PathParam("groupName") String groupName,
                                       @ApiParam(value = "Add new schema to group", required = true) AddSchemaToGroupRequest addSchemaToGroupRequest,
                                       @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
                 throws NotFoundException;
-        
+
         @POST
         @Consumes({"application/json"})
         @io.swagger.annotations.ApiOperation(value = "", notes = "Create a new Group", response = Void.class, tags = {"Group", })
@@ -115,7 +118,21 @@ public final class ApiV1 {
                 @io.swagger.annotations.ApiResponse(code = 404, message = "Group or encoding id with given name not found", response = Void.class),
                 @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching Group details", response = Void.class)})
         void getCodecsList(@ApiParam(value = "Group name", required = true) @PathParam("groupName") String groupName,
-                                 @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                           @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                throws NotFoundException;
+
+        @POST
+        @Path("/{groupName}/codecs")
+        @Consumes({"application/json"})
+        @io.swagger.annotations.ApiOperation(value = "", notes = "Adds a new codec to the group", response = Void.class, tags = {"Group", })
+        @io.swagger.annotations.ApiResponses(value = {
+                @io.swagger.annotations.ApiResponse(code = 201, message = "Successfully added codec to group", response = Void.class),
+                @io.swagger.annotations.ApiResponse(code = 404, message = "Group not found", response = Void.class),
+                @io.swagger.annotations.ApiResponse(code = 412, message = "Codec not found", response = Void.class),
+                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while creating a Group", response = Void.class)})
+        void addCodec(@ApiParam(value = "Group name", required = true) @PathParam("groupName") String groupName,
+                      @ApiParam(value = "The codec", required = true) AddCodec addCodec,
+                      @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
                 throws NotFoundException;
 
         @GET
@@ -176,8 +193,8 @@ public final class ApiV1 {
                 @io.swagger.annotations.ApiResponse(code = 404, message = "Group with given name not found", response = Void.class),
                 @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching Group details", response = Void.class)})
         void getLatestSchemaForObjectType(@ApiParam(value = "Group name", required = true) @PathParam("groupName") String groupName,
-                                         @ApiParam(value = "Object Type", required = true) @PathParam("objectTypeName") String objectTypeName,
-                                         @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                                          @ApiParam(value = "Object Type", required = true) @PathParam("objectTypeName") String objectTypeName,
+                                          @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
                 throws NotFoundException;
 
         @PUT
@@ -206,10 +223,10 @@ public final class ApiV1 {
 
                 @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching Group details", response = Void.class)})
         void getSchemaFromVersionForObjectType(@ApiParam(value = "Group name", required = true) @PathParam("groupName") String groupName,
-                                              @ApiParam(value = "Object type", required = true) @PathParam("objectTypeName") String objectTypeName,
-                                              @ApiParam(value = "version id", required = true) @PathParam("versionId") Integer versionId,
-                                              @ApiParam(value = "Get schema corresponding to the version", required = true) GetSchemaForObjectTypeByVersionRequest getSchemaForObjectTypeByVersionRequest,
-                                              @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                                               @ApiParam(value = "Object type", required = true) @PathParam("objectTypeName") String objectTypeName,
+                                               @ApiParam(value = "version id", required = true) @PathParam("versionId") Integer versionId,
+                                               @ApiParam(value = "Get schema corresponding to the version", required = true) GetSchemaForObjectTypeByVersionRequest getSchemaForObjectTypeByVersionRequest,
+                                               @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
                 throws NotFoundException;
 
         @GET
@@ -249,9 +266,9 @@ public final class ApiV1 {
                 @io.swagger.annotations.ApiResponse(code = 404, message = "Group with given name not found", response = Void.class),
                 @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching Group details", response = Void.class)})
         void getSchemaVersion(@ApiParam(value = "Group name", required = true) @PathParam("groupName") String groupName,
-                                         @ApiParam(value = "schema fingerprint", required = true) @PathParam("fingerprint") Long fingerprint,
-                                         @ApiParam(value = "Get schema corresponding to the version", required = true) GetSchemaVersion getSchemaVersion,
-                                         @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                              @ApiParam(value = "schema fingerprint", required = true) @PathParam("fingerprint") Long fingerprint,
+                              @ApiParam(value = "Get schema corresponding to the version", required = true) GetSchemaVersion getSchemaVersion,
+                              @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
                 throws NotFoundException;
 
 
@@ -264,8 +281,8 @@ public final class ApiV1 {
                 @io.swagger.annotations.ApiResponse(code = 404, message = "Group with given name not found", response = Void.class),
                 @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching Group details", response = Void.class)})
         void getObjectTypeSchemas(@ApiParam(value = "Group name", required = true) @PathParam("groupName") String groupName,
-                                 @ApiParam(value = "Object type", required = true) @PathParam("objectTypeName") String objectTypeName,
-                                 @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                                  @ApiParam(value = "Object type", required = true) @PathParam("objectTypeName") String objectTypeName,
+                                  @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
                 throws NotFoundException;
 
         @GET
@@ -277,7 +294,7 @@ public final class ApiV1 {
                 @io.swagger.annotations.ApiResponse(code = 404, message = "Group with given name not found", response = Void.class),
                 @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching Group details", response = Void.class)})
         void getObjectTypes(@ApiParam(value = "Group name", required = true) @PathParam("groupName") String groupName,
-                           @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                            @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
                 throws NotFoundException;
 
         @GET
@@ -296,7 +313,7 @@ public final class ApiV1 {
         @io.swagger.annotations.ApiResponses(value = {
                 @io.swagger.annotations.ApiResponse(code = 200, message = "Updated schema validation policy", response = Void.class),
                 @io.swagger.annotations.ApiResponse(code = 404, message = "Group with given name not found", response = Void.class),
-                @io.swagger.annotations.ApiResponse(code = 409, message = "Conflict while attempting to update policy.", response = Void.class),
+                @io.swagger.annotations.ApiResponse(code = 412, message = "Write Conflict while attempting to update policy.", response = Void.class),
                 @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching Group details", response = Void.class)})
         void updateSchemaValidationRules(@ApiParam(value = "Group name", required = true) @PathParam("groupName") String groupName,
                                          @ApiParam(value = "update group policy", required = true) UpdateValidationRulesPolicyRequest updateValidationRulesPolicyRequest,
