# server/src/main/java/io/pravega/schemaregistry/storage/records/Record.java
@@ -198,4 +198,41 @@ public interface Record {
             }
         }
     }
+
+    @Data
+    @Builder
+    @AllArgsConstructor
+    public class CodecRecord implements Record {
+        public static final Serializer SERIALIZER = new Serializer();
+
+        private final CodecType codecType;
+
+        private static class CodecRecordBuilder implements ObjectBuilder<CodecRecord> {
+        }
+
+        static class Serializer extends VersionedSerializer.WithBuilder<CodecRecord, CodecRecord.CodecRecordBuilder> {
+            @Override
+            protected CodecRecord.CodecRecordBuilder newBuilder() {
+                return CodecRecord.builder();
+            }
+
+            @Override
+            protected byte getWriteVersion() {
+                return 0;
+            }
+
+            @Override
+            protected void declareVersions() {
+                version(0).revision(0, this::write00, this::read00);
+            }
+
+            private void write00(CodecRecord e, RevisionDataOutput target) throws IOException {
+                CodecTypeRecord.SERIALIZER.serialize(target, new CodecTypeRecord(e.codecType));
+            }
+
+            private void read00(RevisionDataInput source, CodecRecord.CodecRecordBuilder b) throws IOException {
+                b.codecType(CodecTypeRecord.SERIALIZER.deserialize(source).getCodecType());
+            }
+        }
+    }
 }
